# django-app

./: .gitignore  Dockerfile  pyproject.toml
mysite/mysite/: settings.py
