[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["foton-s <box.foton@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.0"
django-rest-framework = "^0.1.0"
django-debug-toolbar = "4.0.0"
django-filter = "^24.3"
pillow = "^10.4.0"
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
